tests/hulk/ok/extras/for_loop.hulk
let sum = 0 in {
    for (x in range(0, 5)) {
        sum := sum + x;
    };
    if (sum == 10) print("ok") else print("fail");
};
