tests/hulk/errors/lexical/stray_backtick.hulk
let x = `hello` in print(x);
